# blitzdg

./: .gitignore  .gitmodules  .travis.yml  ALL_BUILD.vcxproj  Advec1d_8hpp.html  Advec1d_8hpp__incl.map  Advec1d_8hpp__incl.md5  Advec1d_8hpp_source.html  BCtypes_8hpp.html  BCtypes_8hpp__dep__incl.map  BCtypes_8hpp__dep__incl.md5  BCtypes_8hpp_source.html  BlitzHelpers_8hpp.html  BlitzHelpers_8hpp__dep__incl.map  BlitzHelpers_8hpp__dep__incl.md5  BlitzHelpers_8hpp__incl.map  BlitzHelpers_8hpp__incl.md5  BlitzHelpers_8hpp_a039caf8114c4853fb0bd71199149582f_cgraph.map  BlitzHelpers_8hpp_a039caf8114c4853fb0bd71199149582f_cgraph.md5  BlitzHelpers_8hpp_a039caf8114c4853fb0bd71199149582f_icgraph.md5  BlitzHelpers_8hpp_a11524766470643376a34bedb9b22678b_cgraph.map  BlitzHelpers_8hpp_a11524766470643376a34bedb9b22678b_cgraph.md5  BlitzHelpers_8hpp_a11524766470643376a34bedb9b22678b_icgraph.map  BlitzHelpers_8hpp_a11524766470643376a34bedb9b22678b_icgraph.md5  BlitzHelpers_8hpp_a2b714b6a07df67f99846579b713a1581_cgraph.map  BlitzHelpers_8hpp_a2b714b6a07df67f99846579b713a1581_cgraph.md5  BlitzHelpers_8hpp_a2b714b6a07df67f99846579b713a1581_icgraph.map  BlitzHelpers_8hpp_a2b714b6a07df67f99846579b713a1581_icgraph.md5  BlitzHelpers_8hpp_a775d6728bf5f93d49d1f91774d3409eb_cgraph.map  BlitzHelpers_8hpp_a775d6728bf5f93d49d1f91774d3409eb_cgraph.md5  BlitzHelpers_8hpp_a775d6728bf5f93d49d1f91774d3409eb_icgraph.map  BlitzHelpers_8hpp_a775d6728bf5f93d49d1f91774d3409eb_icgraph.md5  BlitzHelpers_8hpp_a9f28879a54e24a2c1683f4e5d4551245_cgraph.map  BlitzHelpers_8hpp_a9f28879a54e24a2c1683f4e5d4551245_cgraph.md5  BlitzHelpers_8hpp_a9f28879a54e24a2c1683f4e5d4551245_icgraph.md5  BlitzHelpers_8hpp_aaa66bfe8cd7c9adad27aa42f765c980b_cgraph.map  BlitzHelpers_8hpp_aaa66bfe8cd7c9adad27aa42f765c980b_cgraph.md5  BlitzHelpers_8hpp_aaa66bfe8cd7c9adad27aa42f765c980b_icgraph.map  BlitzHelpers_8hpp_aaa66bfe8cd7c9adad27aa42f765c980b_icgraph.md5  BlitzHelpers_8hpp_aacde821739fcd71fdfe15db3c55d1aed_cgraph.map  (+743 more)
.circleci/: config.yml
cpp11patch/: os_defines.h  stdio.h  wchar.h
deb/: postinst  postrm
docs/: DirectSolver_8hpp.html  DirectSolver_8hpp__dep__incl.map  DirectSolver_8hpp__dep__incl.md5  DirectSolver_8hpp__incl.map  DirectSolver_8hpp__incl.md5  DirectSolver_8hpp_source.html  EigenSolver_8hpp.html  EigenSolver_8hpp__dep__incl.map  EigenSolver_8hpp__dep__incl.md5  EigenSolver_8hpp__incl.map  EigenSolver_8hpp__incl.md5  EigenSolver_8hpp_source.html  GMRESSolver_8hpp.html  GMRESSolver_8hpp__incl.map  GMRESSolver_8hpp__incl.md5  GMRESSolver_8hpp_a444461a1f46f5ec50f95aea45d936be4_cgraph.map  GMRESSolver_8hpp_a444461a1f46f5ec50f95aea45d936be4_cgraph.md5  GMRESSolver_8hpp_a444461a1f46f5ec50f95aea45d936be4_icgraph.md5  GMRESSolver_8hpp_a6f274deca2f46a57e1fefab015a1c1fa_cgraph.md5  GMRESSolver_8hpp_a6f274deca2f46a57e1fefab015a1c1fa_icgraph.map  GMRESSolver_8hpp_a6f274deca2f46a57e1fefab015a1c1fa_icgraph.md5  GMRESSolver_8hpp_a932140d3f58b7d649a68ed4fb354604b_cgraph.md5  GMRESSolver_8hpp_a932140d3f58b7d649a68ed4fb354604b_icgraph.map  GMRESSolver_8hpp_a932140d3f58b7d649a68ed4fb354604b_icgraph.md5  GMRESSolver_8hpp_ab70e5e5b582121c2bf78c1583d175773_cgraph.map  GMRESSolver_8hpp_ab70e5e5b582121c2bf78c1583d175773_cgraph.md5  GMRESSolver_8hpp_ab70e5e5b582121c2bf78c1583d175773_icgraph.map  GMRESSolver_8hpp_ab70e5e5b582121c2bf78c1583d175773_icgraph.md5  GMRESSolver_8hpp_ac9147b6aee6fbf22e95b2fb3f68ed426_cgraph.md5  GMRESSolver_8hpp_ac9147b6aee6fbf22e95b2fb3f68ed426_icgraph.map  GMRESSolver_8hpp_ac9147b6aee6fbf22e95b2fb3f68ed426_icgraph.md5  GMRESSolver_8hpp_afcef465b1811e1a58461f319ff1c353c_cgraph.map  GMRESSolver_8hpp_afcef465b1811e1a58461f319ff1c353c_cgraph.md5  GMRESSolver_8hpp_afcef465b1811e1a58461f319ff1c353c_icgraph.map  GMRESSolver_8hpp_afcef465b1811e1a58461f319ff1c353c_icgraph.md5  GMRESSolver_8hpp_source.html  GraphBLAS_8h_source.html  LUSolver_8hpp.html  LUSolver_8hpp__incl.map  LUSolver_8hpp__incl.md5  (+4771 more)
include/: BCtypes.hpp  BlitzHelpers.hpp  CSCMatrix.hpp  CSVFileReader.hpp  Constants.hpp  CsvOutputter.hpp  Cubature.hpp  CubatureContext2D.hpp  DGContext2D.hpp  DenseCholeskyFactorizer.hpp  DenseMatrixHelpers.hpp  DenseMatrixInverter.hpp  DirectSolver.hpp  EigenSolver.hpp  GMRESSolver.hpp  GaussFaceContext2D.hpp  JacobiBuilders.hpp  LSERK4.hpp  LUFactorizer.hpp  LUSolver.hpp  LinAlgHelpers.hpp  MeshManager.hpp  Nodes1DProvisioner.hpp  NodesProvisioner2Dbase.hpp  OutputterBase.hpp  PathResolver.hpp  Poisson2DSparseMatrix.hpp  QuadNodesProvisioner.hpp  SparseMatrixConverter.hpp  SparseTriplet.hpp  Traits.hpp  TriangleCubatureRules.hpp  TriangleNodesProvisioner.hpp  Types.hpp  VandermondeBuilders.hpp  VtkOutputter.hpp  VtuOutputPolicies.hpp  Warning.hpp  whereami.h
input/: 2box.E2V  2box.V  R_8km_circle.geo  R_8km_circle.geo.opt  R_8km_circle.msh  R_8km_circle.msh.opt  box.geo  box.msh  coarse_box.geo  coarse_box.msh  coarse_box_quads.msh  coarse_box_quads_fine.msh  csvtest1.csv  csvtest2.csv  csvtest3.csv  csvtest4.csv  trapezoid.msh
lib/: build-whl.sh  setup.py
manylinux2010/: Dockerfile
meshhelpers/: curved.py
pyblitzdg/: Dockerfile  __init__.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enumvalues_0.js  (+66 more)
src/: CSCMatrix.cpp  CSVFileReader.cpp  CsvOutputter.cpp  CubatureContext2D.cpp  DGContext2D.cpp  DenseCholeskyFactorizer.cpp  DenseMatrixHelpers.cpp  DenseMatrixinverter.cpp  DirectSolver.cpp  EigenSolver.cpp  GMRESSolver.cpp  GaussFaceContext2D.cpp  JacobiBuilders.cpp  LUFactorizer.cpp  LUSolver.cpp  LinAlgHelpers.cpp  MeshManager.cpp  Nodes1DProvisioner.cpp  PathResolver.cpp  Poisson2DSparseMatrix.cpp  QuadNodesProvisioner.cpp  SparseMatrixConverter.cpp  SparseTriplet.cpp  TriangleNodesProvisioner.cpp  (+6 more)
(+121 files in other folders)
